--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,15 @@
 :root {
-    --text-light: rgb(19, 10, 21);
-    --bg-light: rgb(243, 234, 245);
-    --primary-light: rgb(119, 184, 101);
-    --secondary-light: rgb(245, 238, 247);
-    --accent-light: rgb(86, 127, 143);
+    --text-light: #130a15;
+    --bg-light: #f3eaf5;
+    --primary-light: #9ec495;
+    --secondary-light: #f5eef7;
+    --accent-light: #567f8f;
 
-    --text-dark: var(--background-light);
-    --bg-dark: var(--text-light);
+    --text-dark: #f3eaf5;
+    --bg-dark: #130a15
     --primary-dark: var(--primary-light);
-    --secondary-dark: rgb(15, 8, 17);
-    --accent-dark: rgb(112, 153, 169);
+    --secondary-dark: #0f0811;
+    --accent-dark: #7099a9;
 }
 
 * {
@@ -25,7 +25,6 @@ body {
 /*----HEADER----*/
 
 header {
-    background-color: var(--primary-light);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -39,7 +38,7 @@ header {
 
 .itemMenu {
     padding: 30px;
-    color: white;
+    color: black;
 }
 
 /*---MAIN----*/
@@ -54,6 +53,10 @@ header {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.portada span {
+    color: green;
 }
 
 /*----PRODUCTOS----*/
@@ -72,6 +75,7 @@ header {
     box-shadow: 10px 13px 5px -4px rgba(0,0,0,0.23);
     -webkit-box-shadow: 10px 13px 5px -4px rgba(0,0,0,0.23);
     -moz-box-shadow: 10px 13px 5px -4px rgba(0,0,0,0.23);
+    background-color: var(--primary-light);
 }
 
 .product img {
@@ -81,14 +85,53 @@ header {
     margin-top: 0;
 }
 
+.card .card-body {
+    padding: 12px;
+}
+
+/* .container .col {
+    padding: 0px;
+    width: 30px;
+    height: 30px;
+    flex: 0 0 0%;
+} */
+
+.card .container {
+    display: flex;
+    flex-direction: row;
+    padding: 0px;
+}
+
+.card .container .div-quantity {
+    display: flex;
+    flex-direction: row;
+    margin-left: 50px;
+}
+
+.container p {
+    margin: 0px;
+    width: 35px;
+    height: 35px;
+    font-size: 20px;
+    text-align: center;
+    padding-top: 2px;
+}
+
+.quantity-sum, .quantity-minus {
+    width: 35px;
+    height: 35px;
+    border: none;
+    padding: 0px;
+    background-color: rgba(128, 128, 128, 0.247);
+}
+
 /*----CARRITO----*/
 .cart {
     border: 2px solid black;
 }
 
-.cart h2{
+.cart h2 {
     text-align: center;
-    background-color:  rgb(168, 168, 168);
 }
 
 .cart ul {
@@ -100,28 +143,30 @@ header {
     margin-bottom: 5px;
 }
 
-.cart div{
+.cart div {
     text-align: center;
 }
 
-.cart button{
+.cart button {
     padding: 5px;
 }
 
 .add-to-cart-btn {
-    background-color: white;
-    /* border-radius: 10px; */
-    color: grey;
-    border: 2px solid grey;
-    padding: 5px 10px;
+    background-color: var(--primary-light);
+    border-radius: 10px;
+    border: 0px;
+    color: var(--text-light);
+    padding: 5px 5px;
     cursor: pointer;
     text-align: center;
+    height: 35px;
 }
 
-.add-to-cart-btn:hover{
-    background-color: grey;
+.add-to-cart-btn:hover {
+    /* transform: scale(1.1);
+    transition-duration: .5s; */
     color: white;
-    
+    box-shadow: 5px 8px 5px -4px rgba(0,0,0,0.23);
 }
 
 .total {
@@ -129,7 +174,7 @@ header {
     justify-content: center;
     width: 100%;
     padding: 20px;
-    background-color: rgb(168, 168, 168);
+    background-color: var(--primary-light);
     color: white;
     border: 2px solid black;
     margin-bottom: 50px;
@@ -137,10 +182,10 @@ header {
 
 /*--FOOTER--*/
 
-footer{
+footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: grey;
+    background-color: var(--primary-light);
     padding: 20px;
 }
